For PR libgcj/5303: 	* jargrep.h: Removed RCS keywords. 	(GVERSION): Removed. 	* configure, Makefile.in, config.h.in: Rebuilt. 	* configure.in: Added AM_MAINTAINER_MODE. 	Don't look for getopt.h.  Use `fastjar' as package name. 	* Makefile.am (INCLUDES): Look in ../include. 	(LIBIBERTY): New macro. 	(jar_LDADD): Use it. 	(jar_DEPENDENCIES): Likewise. 	(grepjar_LDADD): Likewise. 	(grepjar_DEPENDENCIES): Likewise. 	* jargrep.c: Removed RCS keywords.  Always include getopt.h. 	(LONG_OPT): New macro. 	(OPT_HELP): Likewise. 	(main): Use getopt_long.  Let getopt print invalid argument 	message.  Handle --help.  Use version(). 	(version): New function. 	(optarg, optind): Don't declare. 	(option_vec): New global. 	(help): New function. 	(Usage): Updated to GNU standards. 	* jartool.c: Removed RCS keywords.  Include getopt.h. 	(LONG_OPT): New macro. 	(OPT_HELP): Likewise. 	(options): New global. 	(help): New function. 	(usage): Print a single line. 	(version): New function. 	(expand_options): New function. 	(main): Use getopt_long and expand_options.  Fail if `-u' 	specified.  Changed handling of -f, -m, -V options. 	(OPTION_STRING): New macro. 	(version_string): Removed.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48697 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/fastjar/Makefile.am
+++ b/fastjar/Makefile.am
@@ -38,14 +38,19 @@ AM_MAKEFLAGS = \
 	"RANLIB=$(RANLIB)" \
 	"DESTDIR=$(DESTDIR)"
 
-INCLUDES = -I. -I$(top_srcdir) $(ZINCS)
+INCLUDES = -I. -I$(top_srcdir) $(ZINCS) -I$(top_srcdir)/../include
+
+LIBIBERTY = ../libiberty/libiberty.a
 
 bin_PROGRAMS = jar grepjar
-jar_SOURCES = jartool.c dostime.c compress.c pushback.c jartool.h zipfile.h dostime.h compress.h pushback.h
-jar_LDADD = $(ZLIBS)
-jar_DEPENDENCIES = $(ZDEPS)
-grepjar_SOURCES = jargrep.c dostime.c compress.c pushback.c jartool.h zipfile.h dostime.h compress.h pushback.h
-grepjar_LDADD = $(ZLIBS)
-grepjar_DEPENDENCIES = $(ZDEPS)
+jar_SOURCES = jartool.c dostime.c compress.c pushback.c jartool.h \
+zipfile.h dostime.h compress.h pushback.h
+jar_LDADD = $(ZLIBS) $(LIBIBERTY)
+jar_DEPENDENCIES = $(ZDEPS) $(LIBIBERTY)
+
+grepjar_SOURCES = jargrep.c dostime.c compress.c pushback.c jartool.h \
+zipfile.h dostime.h compress.h pushback.h
+grepjar_LDADD = $(ZLIBS) $(LIBIBERTY)
+grepjar_DEPENDENCIES = $(ZDEPS) $(LIBIBERTY)
 
 AM_CFLAGS = @fastjar_warn_cflags@
