* Makefile.in (s-gencheck, s-options, s-specs): Handle an 	empty list correctly.  Change loop index $t to $f for 	consistency with rest of Makefile.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48711 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1266,24 +1266,24 @@ gencheck.o : gencheck.c gencheck.h tree.def $(HCONFIG_H) $(SYSTEM_H) \
 
 gencheck.h : s-gencheck ; @true
 s-gencheck : Makefile
-	for t in $(lang_tree_files); do \
-	    echo "#include \"$$t\""; \
+	ltf="$(lang_tree_files)"; for f in $$ltf; do \
+	    echo "#include \"$$f\""; \
 	done | sed 's|$(srcdir)/||' > tmp-gencheck.h
 	$(SHELL) $(srcdir)/move-if-change tmp-gencheck.h gencheck.h
 	$(STAMP) s-gencheck
 
 options.h : s-options ; @true
 s-options : Makefile
-	for t in $(lang_options_files); do \
-	    echo "#include \"$$t\""; \
+	lof="$(lang_options_files)"; for f in $$lof; do \
+	    echo "#include \"$$f\""; \
 	done | sed 's|$(srcdir)/||' > tmp-options.h
 	$(SHELL) $(srcdir)/move-if-change tmp-options.h options.h
 	$(STAMP) s-options
 
 specs.h : s-specs ; @true
 s-specs : Makefile
-	for t in $(lang_specs_files); do \
-	    echo "#include \"$$t\""; \
+	lsf="$(lang_specs_files)"; for f in $$lsf; do \
+	    echo "#include \"$$f\""; \
 	done | sed 's|$(srcdir)/||' > tmp-specs.h
 	$(SHELL) $(srcdir)/move-if-change tmp-specs.h specs.h
 	$(STAMP) s-specs
