* basic-block.h (update_br_prob_note): Declare. 	* cfgcleanup.c (try_crossjump_to_edge): Use update_br_prob_note. 	* cfglayout.c (fixup_reorder_chain): Likewise. 	* cfgrtl.c (update_br_prob_note): New. 	(verify_flow_info): Verify the br_prob notes. 	* ifcvt.c (process_double_test): Likewise.
	* (try_forward_edges):  Properly initialize nthreaded_edges;
	update edge probabilities to match.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@48720 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,17 @@
+Thu Jan 10 10:58:53 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* basic-block.h (update_br_prob_note): Declare.
+	* cfgcleanup.c (try_crossjump_to_edge): Use update_br_prob_note.
+	* cfglayout.c (fixup_reorder_chain): Likewise.
+	* cfgrtl.c (update_br_prob_note): New.
+	(verify_flow_info): Verify the br_prob notes.
+	* ifcvt.c (process_double_test): Likewise.
+
+Thu Jan 10 10:44:38 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* (try_forward_edges):  Properly initialize nthreaded_edges;
+	update edge probabilities to match.
+
 Wed Jan  9 14:14:37 CET 2002  Josef Zlomek  <zlomj9am@artax.karlin.mff.cuni.cz>
 
 	* basic-block.h: New flag EDGE_CAN_FALLTHRU
