* Makefile.in ($(docdir)/gccint.info, gccint.dvi): Add additional 	dependencies. 	* doc/languages.texi, doc/sourcebuild.texi: New files. 	* doc/configfiles.texi: Make a subsubsection.  Update. 	* doc/configterms.texi: Add @node.  Remove warning that this isn't 	instructions for building GCC. 	* doc/makefile.texi: Make a subsection. 	* doc/gccint.texi: Update.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48731 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -2278,7 +2278,8 @@ $(docdir)/gccint.info: $(docdir)/gccint.texi \
 	 $(docdir)/configfiles.texi $(docdir)/collect2.texi \
 	 $(docdir)/headerdirs.texi $(docdir)/include/funding.texi \
 	 $(docdir)/gnu.texi $(docdir)/include/gpl.texi \
-	 $(docdir)/include/fdl.texi $(docdir)/contrib.texi
+	 $(docdir)/include/fdl.texi $(docdir)/contrib.texi \
+	 $(docdir)/languages.texi $(docdir)/sourcebuild.texi
 	cd $(srcdir) && $(MAKEINFO) $(MAKEINFOFLAGS) -I doc -I doc/include -o doc/gccint.info doc/gccint.texi
 
 $(docdir)/cppinternals.info: $(docdir)/cppinternals.texi
@@ -2312,7 +2313,8 @@ gccint.dvi: $(docdir)/gccint.texi \
 	 $(docdir)/configfiles.texi $(docdir)/collect2.texi \
 	 $(docdir)/headerdirs.texi $(docdir)/include/funding.texi \
 	 $(docdir)/gnu.texi $(docdir)/include/gpl.texi \
-	 $(docdir)/include/fdl.texi $(docdir)/contrib.texi
+	 $(docdir)/include/fdl.texi $(docdir)/contrib.texi \
+	 $(docdir)/languages.texi $(docdir)/sourcebuild.texi
 	$(TEXI2DVI) -I $(docdir) -I $(docdir)/include $(docdir)/gccint.texi
 
 cppinternals.dvi: $(docdir)/cppinternals.texi
