* gcse.c (hash_scan_set): Use CONSTANT_INSN_P. 	(cprop_insn): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@48738 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,8 @@
+Thu Jan 10 19:34:16 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* gcse.c (hash_scan_set): Use CONSTANT_INSN_P.
+	(cprop_insn): Likewise.
+
 Thu Jan 10 18:30:31 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* Mainline merger (cfg-merge-20021001 tag).
