* java/lang/natSystem.cc (init_properties): Only look for default 	locale if LC_MESSAGES is defined. 	* aclocal.m4, configure, include/config.h.in: Rebuilt. 	* configure.in: Call AM_LC_MESSAGES. 	* acinclude.m4 (AM_LC_MESSAGES): New macro.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48781 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/configure.in
+++ b/libjava/configure.in
@@ -450,6 +450,7 @@ else
      AC_DEFINE(HAVE_PROC_SELF_EXE)])
 
    AM_ICONV
+   AM_LC_MESSAGES
    AC_STRUCT_TIMEZONE
 
    AC_CHECK_FUNCS(gethostbyname_r, [
