* cfgcleanup.c (try_forward_edges): Avoid infinite loop at infinite 	threaded loop.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@48805 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,8 @@
+Sat Jan 12 18:53:24 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* cfgcleanup.c (try_forward_edges): Avoid infinite loop at infinite
+	threaded loop.
+
 Thu Jan 10 19:34:16 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* gcse.c (hash_scan_set): Use CONSTANT_INSN_P.
