--- a/fastjar/Makefile.am
+++ b/fastjar/Makefile.am
@@ -1,5 +1,8 @@
 # Process this with automake to create Makefile.in
 
+## We definitely don't want dependency tracking when using automake 1.4.
+AUTOMAKE_OPTIONS = no-dependencies
+
 # Work around what appears to be a GNU make bug handling MAKEFLAGS
 # values defined in terms of make variables, as is the case for CC and
 # friends when we are called from the top level Makefile.
