* predict.c (estimate_probability): Ensure there are two edges leaving insn. 	(estimate_bb_frequencies): Do not reload REG_BR_PROB notes.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@48829 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,8 @@
+Mon Jan 14 15:58:03 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* predict.c (estimate_probability): Ensure there are two edges leaving insn.
+	(estimate_bb_frequencies): Do not reload REG_BR_PROB notes.
+
 Sat Jan 12 18:53:24 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* cfgcleanup.c (try_forward_edges): Avoid infinite loop at infinite
