cfg.c (dump_edge_info): added dumping of EDGE_CAN_FALLTHRU. 	bb-reorder.c (find_traces_1_round): fixed bug in computing the 	iterations of the loop.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@48849 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,9 @@
+2002-01-14  Josef Zlomek  <zlomek@matfyz.cz>
+
+	cfg.c (dump_edge_info): added dumping of EDGE_CAN_FALLTHRU.
+	bb-reorder.c (find_traces_1_round): fixed bug in computing the
+	iterations of the loop.
+
 Mon Jan 14 21:43:53 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* Merge from mainline (cfg-merge-20021401 tag).
