2002-01-14  John David Anglin  <dave@hiauly1.hia.nrc.ca>
	* libI77/configure.in (_LARGEFILE_SOURCE): AC_DEFINE.
	* libI77/configure: Rebuilt.
	* libI77/config.h.in: Rebuilt.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48853 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libf2c/libI77/config.h.in
+++ b/libf2c/libI77/config.h.in
@@ -42,6 +42,9 @@
 /* Get 64-bit file size support */
 #undef _FILE_OFFSET_BITS
 
+/* Define for HP-UX ftello and fseeko extension. */
+#undef _LARGEFILE_SOURCE
+
 /* Define if fcntl.h is missing. */
 #undef NO_FCNTL
 
