* libI77/configure.in: Remove fcntl.h check; never define 	_POSIX_SOURCE, NO_FCNTL or OPEN_DECL.  Add check for tmpnam(). 	* libI77/configure: Rebuilt. 	* libI77/config.h.in: Rebuilt. 	* libI77/Makefile.in: Remove all traces of rawio.h from 	dependencies lists. 	* libI77/fio.h (FSEEK): Unroll -j1.7 -j1.6 made 2002-01-04. 	* libI77/open.c (f_open): Use HAVE_TMPNAM. 	* libI77/rawio.h: Remove file.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48875 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libf2c/libI77/config.h.in
+++ b/libf2c/libI77/config.h.in
@@ -6,9 +6,6 @@
 /* Define to `long' if <sys/types.h> doesn't define.  */
 #undef off_t
 
-/* Define if you need to in order for stat and other things to work.  */
-#undef _POSIX_SOURCE
-
 /* Define to `unsigned' if <sys/types.h> doesn't define.  */
 #undef size_t
 
@@ -30,6 +27,9 @@
 /* Define if you have the tempnam function.  */
 #undef HAVE_TEMPNAM
 
+/* Define if you have the tmpnam function.  */
+#undef HAVE_TMPNAM
+
 /* Get Single Unix Specification semantics */
 #undef _XOPEN_SOURCE
 
@@ -44,12 +44,6 @@
 
 /* Define for HP-UX ftello and fseeko extension. */
 #undef _LARGEFILE_SOURCE
-
-/* Define if fcntl.h is missing. */
-#undef NO_FCNTL
-
-/* Define if fcntl.h is missing. */
-#undef OPEN_DECL
 
 /* Define if we do not have Unix Stdio. */
 #undef NON_UNIX_STDIO
