For PR libgcj/5303: 	* Make-lang.in (java.install-man): Handle jv-convert man page. 	(java.generated-manpages): Added jv-convert.1. 	(java.uninstall): Remove jv-convert.1. 	(java.maintainer-clean): Likewise. 	($(srcdir)/java/jv-convert.1): New target. 	* gcj.texi (Top): Link to jv-convert node. 	(Individual utilities): Likewise. 	(Invoking jv-convert): New node.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48889 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/Make-lang.in
+++ b/gcc/java/Make-lang.in
@@ -1,6 +1,6 @@
 # Top level makefile fragment for the GNU compiler for the Java(TM)
 # language.
-#   Copyright (C) 1996, 1998, 1999, 2000, 2001 Free Software Foundation, Inc.
+#   Copyright (C) 1996, 1998, 1999, 2000, 2001, 2002 Free Software Foundation, Inc.
 
 #This file is part of GNU CC.
 
@@ -151,7 +151,7 @@ java.info: $(srcdir)/java/gcj.info
 java.dvi: java/gcj.dvi
 java.generated-manpages: $(srcdir)/java/gcj.1 $(srcdir)/java/gcjh.1 \
 	$(srcdir)/java/jv-scan.1 $(srcdir)/java/jcf-dump.1 \
-	$(srcdir)/java/gij.1
+	$(srcdir)/java/gij.1 $(srcdir)/java/jv-convert.1
 
 # Install hooks:
 # jc1, gcj, jvgenmain, and gcjh are installed elsewhere as part
@@ -192,6 +192,7 @@ java.uninstall:
 	-rm -rf $(man1dir)/jv-scan$(man1ext)
 	-rm -rf $(man1dir)/jcf-dump$(man1ext)
 	-rm -rf $(man1dir)/gij$(man1ext)
+	-rm -rf $(man1dir)/jv-convert$(man1ext)
 
 java.install-info: installdirs
 	if [ -f jc1$(exeext) ] ; then \
@@ -228,6 +229,7 @@ java.maintainer-clean:
 	-rm -f $(srcdir)/java/gcj.1 $(srcdir)/java/gcjh.1
 	-rm -f $(srcdir)/java/jv-scan.1 $(srcdir)/java/jcf-dump.1
 	-rm -f $(srcdir)/java/gij.1
+	-rm -f $(srcdir)/java/jv-convert.1
 #
 # Stage hooks:
 # The main makefile has already created stage?/java.
@@ -356,6 +358,13 @@ $(srcdir)/java/gij.1: $(srcdir)/java/gcj.texi
 		(rm -f java/gij.1.T$$$$ && exit 1)
 	rm -f java/gij.pod
 
+$(srcdir)/java/jv-convert.1: $(srcdir)/java/gcj.texi
+	-$(TEXI2POD) -D jv-convert < $(srcdir)/java/gcj.texi > java/jv-convert.pod
+	($(POD2MAN) --section=1 java/jv-convert.pod > java/jv-convert.1.T$$$$ && \
+		mv -f java/jv-convert.1.T$$$$ $(srcdir)/java/jv-convert.1) || \
+		(rm -f java/jv-convert.1.T$$$$ && exit 1)
+	rm -f java/jv-convert.pod
+
 # Install the man pages.
 java.install-man: installdirs $(GENERATED_JAVA_MANPAGES)
 	-if [ -f $(GCJ)$(exeext) ]; then \
@@ -381,3 +390,6 @@ java.install-man: installdirs $(GENERATED_JAVA_MANPAGES)
 	-rm -f $(man1dir)/gij$(man1ext)
 	-$(INSTALL_DATA) $(srcdir)/java/gij.1 $(man1dir)/gij$(man1ext)
 	-chmod a-x $(man1dir)/gij$(man1ext)
+	-rm -f $(man1dir)/jv-convert$(man1ext)
+	-$(INSTALL_DATA) $(srcdir)/java/jv-convert.1 $(man1dir)/jv-convert$(man1ext)
+	-chmod a-x $(man1dir)/jv-convert$(man1ext)
