Start of AWT merge with Classpath: 	* Makefile.in: Rebuilt. 	* Makefile.am (awt_java_source_files): Reference files in 	gnu/java/awt, not gnu/gcj/awt. 	* java/awt/image/BufferedImage.java: Updated copyright. 	* java/awt/image/ComponentColorModel.java: Updated copyright. 	* java/awt/image/ComponentSampleModel.java: Updated copyright. 	* java/awt/image/DataBuffer.java: Updated copyright. 	* java/awt/image/DataBufferByte.java: Updated copyright. 	* java/awt/image/DataBufferInt.java: Updated copyright. 	* java/awt/image/DataBufferUShort.java: Updated copyright. 	* java/awt/image/IndexColorModel.java: Updated copyright. 	* java/awt/image/PackedColorModel.java: Updated copyright. 	* java/awt/image/Raster.java: Updated copyright. 	* java/awt/image/RasterOp.java: Updated copyright. 	* java/awt/image/SampleModel.java: Updated copyright. 	* java/awt/image/SinglePixelPackedSampleModel.java: Updated copyright. 	* java/awt/image/WritableRaster.java: Updated copyright. 	* java/awt/color/ColorSpace.java: Updated copyright. 	* java/awt/color/ICC_ColorSpace.java: Updated copyright 	* java/awt/color/ICC_Profile.java: Updated copyright. 	* java/awt/event/HierarchyBoundsAdapter.java: Updated copyright. 	* java/awt/event/HierarchyBoundsListener.java: Updated copyright. 	* java/awt/event/HierarchyEvent.java: Updated copyright. 	* java/awt/event/HierarchyListener.java: Updated copyright. 	* java/awt/geom/AffineTransform.java: Updated copyright. 	* java/awt/geom/Dimension2D.java: Updated copyright. 	* java/awt/geom/Ellipse2D.java: Updated copyright. 	* java/awt/geom/IllegalPathStateException.java: Updated copyright. 	* java/awt/geom/Line2D.java: Updated copyright. 	* java/awt/geom/NoninvertibleTransformException.java: Updated 	copyright. 	* java/awt/geom/PathIterator.java: Updated copyright. 	* java/awt/geom/Point2D.java: Updated copyright. 	* java/awt/geom/Rectangle2D.java: Updated copyright. 	* java/awt/geom/RectangularShape.java: Updated copyright. 	* java/awt/geom/RoundRectangle2D.java

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -583,10 +583,10 @@ gnu/awt/j2d/DirectRasterGraphics.java \
 gnu/awt/j2d/Graphics2DImpl.java \
 gnu/awt/j2d/IntegerGraphicsState.java \
 gnu/awt/j2d/MappedRaster.java \
-gnu/gcj/awt/BitMaskExtent.java \
-gnu/gcj/awt/Buffers.java \
-gnu/gcj/awt/ComponentDataBlitOp.java \
-gnu/gcj/awt/GLightweightPeer.java \
+gnu/java/awt/BitMaskExtent.java \
+gnu/java/awt/Buffers.java \
+gnu/java/awt/ComponentDataBlitOp.java \
+gnu/java/awt/GLightweightPeer.java \
 gnu/java/beans/editors/ColorEditor.java	\
 gnu/java/beans/editors/FontEditor.java \
 gnu/java/beans/editors/NativeBooleanEditor.java	\
