--- a/libjava/include/config.h.in
+++ b/libjava/include/config.h.in
@@ -396,6 +396,9 @@
 /* Define as const if the declaration of iconv() needs const. */
 #undef ICONV_CONST
 
+/* Define if your <locale.h> file defines LC_MESSAGES. */
+#undef HAVE_LC_MESSAGES
+
 /* Required define if using POSIX threads */
 #undef _REENTRANT
 
