* gcse.c (struct expr): Add insn. 	(struct occr): Add can_delete_p. 	(end_bb_insertion_point): Break out from ... 	(insert_insn_end_bb): ... here; Remove parameter pre; 	use hoist_insn_after. 	(can_inisert_insn_end_bb_p, can_insert_insn_edge_p): New. 	(process_insert_insn): Kill. 	(pre_edge_try_insert): New. 	(gcse_emit_move_after): New function. 	(gcse_main): Build and maitain liveness information. 	(compute_local_properties): Initialize can_delete_p. 	(want_to_gcse): Simplify. 	(insert_expr_in_table): Record insn for expr. 	(hash_scan_set): Avoid gcseing unused sets. 	(hoist_code): Validate motion first.
	* cfgrtl.c: Include insn-config.h, recog.h and expr.h
	(hoist_test_store, hoist_update_store): New static functions.
	(can_hoist_insn, hoist_insn_after, hoist_insn_to_edge): New
	global functions.
	* emit-rtl.c (emit_copy_of_insn_after): New.
	* cfglayout.c (cfg_layout_duplicate_bb): Use emit_copy_of_insn_after.
	* basic-block.h (can_hoist_insn_p, hoist_insn_after,
	hoist_insn_to_edge): Declare.
	* Makefile.in (cfgrtl.o): Add dependencies.
	* rtl.h (emit_copy_of_insn_after): Declare.

	* cfgloopanal.c: New file.
	* basic_block.h (struct loop_invariants, loop_invariants,
	free_loop_invariants, test_invariants, loop_invariant_rtx_p): Declare.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@48919 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,36 @@
+Wed Jan 16 19:11:19 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* gcse.c (struct expr): Add insn.
+	(struct occr): Add can_delete_p.
+	(end_bb_insertion_point): Break out from ...
+	(insert_insn_end_bb): ... here; Remove parameter pre;
+	use hoist_insn_after.
+	(can_inisert_insn_end_bb_p, can_insert_insn_edge_p): New.
+	(process_insert_insn): Kill.
+	(pre_edge_try_insert): New.
+	(gcse_emit_move_after): New function.
+	(gcse_main): Build and maitain liveness information.
+	(compute_local_properties): Initialize can_delete_p.
+	(want_to_gcse): Simplify.
+	(insert_expr_in_table): Record insn for expr.
+	(hash_scan_set): Avoid gcseing unused sets.
+	(hoist_code): Validate motion first.
+
+	* cfgrtl.c: Include insn-config.h, recog.h and expr.h
+	(hoist_test_store, hoist_update_store): New static functions.
+	(can_hoist_insn, hoist_insn_after, hoist_insn_to_edge): New
+	global functions.
+	* emit-rtl.c (emit_copy_of_insn_after): New.
+	* cfglayout.c (cfg_layout_duplicate_bb): Use emit_copy_of_insn_after.
+	* basic-block.h (can_hoist_insn_p, hoist_insn_after,
+	hoist_insn_to_edge): Declare.
+	* Makefile.in (cfgrtl.o): Add dependencies.
+	* rtl.h (emit_copy_of_insn_after): Declare.
+
+	* cfgloopanal.c: New file.
+	* basic_block.h (struct loop_invariants, loop_invariants,
+	free_loop_invariants, test_invariants, loop_invariant_rtx_p): Declare.
+
 2002-01-14  Josef Zlomek  <zlomek@matfyz.cz>
 
 	cfg.c (dump_edge_info): added dumping of EDGE_CAN_FALLTHRU.
