--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,13 @@
+Thu Jan 17 13:41:55 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* df.c (df_ref_create, df_ref_record_1, df_ref_record): Kill BB argument.
+	* df.h (struct ref): Kill B.
+	(DF_REF_BB, DF_REF_BBNO): Use BLOCK_FOR_INSN.
+
+	* basic-block.h (PROP_EQUAL_NOTES): New flag.
+	* flow.c (propagate_one_insn): Use it.
+	(mark_used_regs): Handle NIL.
+
 Wed Jan 16 19:11:19 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* gcse.c (struct expr): Add insn.
