* combine.c (simplify_comparison): Strengthen the condition of 	sign_extension removing case.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@48950 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,8 @@
+Thu Jan 17 15:09:02 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* combine.c (simplify_comparison): Strengthen the condition of
+	sign_extension removing case.
+
 Thu Jan 17 13:41:55 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* df.c (df_ref_create, df_ref_record_1, df_ref_record): Kill BB argument.
