* Makefile.am (EXTRA_DIST): Add Darwin and AIX files.         (TARGET_SRC_POWERPC_AIX): New.         (POWERPC_AIX): New stanza.         * Makefile.in: Regenerate.         * configure.in: Add AIX case.         * configure: Regenerate.         * include/ffi.h.in (ffi_abi): Add FFI_AIX.         * src/powerpc/ffi_darwin.c (ffi_status): Use "long" to scale frame         size.  Fix "long double" support.         (ffi_call): Add FFI_AIX case.         * src/powerpc/aix.S: New.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48956 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libffi/configure.in
+++ b/libffi/configure.in
@@ -57,6 +57,8 @@ m68k-*-linux*) TARGET=M68K; TARGETDIR=m68k;;
 powerpc-*-linux* | powerpc-*-sysv*) TARGET=POWERPC; TARGETDIR=powerpc;;
 powerpc-*-beos*) TARGET=POWERPC; TARGETDIR=powerpc;;
 powerpc-*-darwin*) TARGET=POWERPC_DARWIN; TARGETDIR=powerpc;;
+powerpc-*-aix*) TARGET=POWERPC_AIX; TARGETDIR=powerpc;;
+rs6000-*-aix*) TARGET=POWERPC_AIX; TARGETDIR=powerpc;;
 arm*-*-linux-*) TARGET=ARM; TARGETDIR=arm;;
 esac
 
@@ -73,6 +75,7 @@ AM_CONDITIONAL(ALPHA, test x$TARGET = xALPHA)
 AM_CONDITIONAL(IA64, test x$TARGET = xIA64)
 AM_CONDITIONAL(M68K, test x$TARGET = xM68K)
 AM_CONDITIONAL(POWERPC, test x$TARGET = xPOWERPC)
+AM_CONDITIONAL(POWERPC_AIX, test x$TARGET = xPOWERPC_AIX)
 AM_CONDITIONAL(POWERPC_DARWIN, test x$TARGET = xPOWERPC_DARWIN)
 AM_CONDITIONAL(ARM, test x$TARGET = xARM)
 
