--- a/libffi/include/ffi.h.in
+++ b/libffi/include/ffi.h.in
@@ -1,5 +1,5 @@
 /* -----------------------------------------------------------------*-C-*-
-   libffi @VERSION@ - Copyright (c) 1996-1999  Cygnus Solutions
+   libffi @VERSION@ - Copyright (c) 1996-2002  Cygnus Solutions
 
    Permission is hereby granted, free of charge, to any person obtaining
    a copy of this software and associated documentation files (the
@@ -233,7 +233,14 @@ typedef enum ffi_abi {
   FFI_DEFAULT_ABI = FFI_GCC_SYSV,
 #endif
 
+#ifdef POWERPC_AIX
+  FFI_AIX,
+  FFI_DARWIN,
+  FFI_DEFAULT_ABI = FFI_AIX,
+#endif
+
 #ifdef POWERPC_DARWIN
+  FFI_AIX,
   FFI_DARWIN,
   FFI_DEFAULT_ABI = FFI_DARWIN,
 #endif
