2002-01-17  H.J. Lu <hjl@gnu.org>
	* Makefile.in (all-fastjar): Also depend on all-libiberty.
	(all-target-fastjar): Also depend on all-target-libiberty.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48976 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/Makefile.in
+++ b/Makefile.in
@@ -1823,9 +1823,9 @@ all-zip:
 all-zlib:
 configure-target-zlib: $(ALL_GCC_C)
 all-target-zlib: configure-target-zlib
-all-fastjar: all-zlib
+all-fastjar: all-zlib all-libiberty
 configure-target-fastjar: configure-target-zlib
-all-target-fastjar: configure-target-fastjar all-target-zlib
+all-target-fastjar: configure-target-fastjar all-target-zlib all-target-libiberty
 configure-target-libiberty: $(ALL_GCC_C)
 all-target-libiberty: configure-target-libiberty
 all-target: $(ALL_TARGET_MODULES)
